# strength-tracker

./: .SRCINFO  .aurignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  config.yaml  design.txt  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: aur-release.yml  release.yml  test.yml
scripts/: update-aur.sh
strength_tracker/: __init__.py  strength_tracker.py
